--- a/hipster/helm-chart/templates/backup-04-july-2025/adservice.yaml
+++ b/hipster/helm-chart/templates/backup-04-july-2025/adservice.yaml
@@ -12,12 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if .Values.shippingService.create }}
+{{- if .Values.adService.create }}
 {{- if .Values.serviceAccounts.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.adService.name }}
   namespace: {{.Release.Namespace}}
   {{- if not .Values.serviceAccounts.annotationsOnlyForCartservice }}
   {{- with .Values.serviceAccounts.annotations }}
@@ -30,24 +30,25 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.adService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.adService.name }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.adService.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.shippingService.name }}
+        app: {{ .Values.adService.name }}
     spec:
       {{- if .Values.serviceAccounts.create }}
-      serviceAccountName: {{ .Values.shippingService.name }}
+      serviceAccountName: {{ .Values.adService.name }}
       {{- else }}
       serviceAccountName: default
       {{- end }}
+      terminationGracePeriodSeconds: 5
       {{- if .Values.securityContext.enable }}
       securityContext:
         fsGroup: 1000
@@ -68,52 +69,51 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
+        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
-        - containerPort: 50051
+        - containerPort: 9555
         env:
         - name: PORT
-          value: "50051"
-        {{- if not .Values.googleCloudOperations.profiler }}
-        - name: DISABLE_PROFILER
-          value: "1"
-        {{- end }}
-        readinessProbe:
-          periodSeconds: 5
-          grpc:
-            port: 50051
-        livenessProbe:
-          grpc:
-            port: 50051
+          value: "9555"
         resources:
-          {{- toYaml .Values.shippingService.resources | nindent 10 }}
+          {{- toYaml .Values.adService.resources | nindent 10 }}
+        readinessProbe:
+          initialDelaySeconds: 20
+          periodSeconds: 15
+          grpc:
+            port: 9555
+        livenessProbe:
+          initialDelaySeconds: 20
+          periodSeconds: 15
+          grpc:
+            port: 9555
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.adService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.adService.name }}
 spec:
   type: ClusterIP
   selector:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.adService.name }}
   ports:
   - name: grpc
-    port: 50051
-    targetPort: 50051
+    port: 9555
+    targetPort: 9555
 {{- if .Values.networkPolicies.create }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.adService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   podSelector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.adService.name }}
   policyTypes:
   - Ingress
   - Egress
@@ -122,11 +122,8 @@ spec:
     - podSelector:
         matchLabels:
           app: {{ .Values.frontend.name }}
-    - podSelector:
-        matchLabels:
-          app: {{ .Values.checkoutService.name }}
     ports:
-     - port: 50051
+     - port: 9555
        protocol: TCP
   egress:
   - {}
@@ -136,12 +133,12 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: Sidecar
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.adService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   workloadSelector:
     labels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.adService.name }}
   egress:
   - hosts:
     - istio-system/*
@@ -154,30 +151,28 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.adService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.adService.name }}
   rules:
   - from:
     - source:
         principals:
         {{- if .Values.serviceAccounts.create }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.frontend.name }}
-        - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.checkoutService.name }}
         {{- else }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/default
         {{- end }}
     to:
     - operation:
         paths:
-        - /hipstershop.ShippingService/GetQuote
-        - /hipstershop.ShippingService/ShipOrder
+        - /hipstershop.AdService/GetAds
         methods:
         - POST
         ports:
-        - "50051"
+        - "9555"
 {{- end }}
 {{- end }}
