--- a/hipster/helm-chart/templates/backup-04-july-2025/paymentservice.yaml
+++ b/hipster/helm-chart/templates/backup-04-july-2025/paymentservice.yaml
@@ -12,12 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if .Values.shippingService.create }}
+{{- if .Values.paymentService.create }}
 {{- if .Values.serviceAccounts.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.paymentService.name }}
   namespace: {{.Release.Namespace}}
   {{- if not .Values.serviceAccounts.annotationsOnlyForCartservice }}
   {{- with .Values.serviceAccounts.annotations }}
@@ -30,24 +30,25 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.paymentService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.paymentService.name }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.paymentService.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.shippingService.name }}
+        app: {{ .Values.paymentService.name }}
     spec:
       {{- if .Values.serviceAccounts.create }}
-      serviceAccountName: {{ .Values.shippingService.name }}
+      serviceAccountName: {{ .Values.paymentService.name }}
       {{- else }}
       serviceAccountName: default
       {{- end }}
+      terminationGracePeriodSeconds: 5
       {{- if .Values.securityContext.enable }}
       securityContext:
         fsGroup: 1000
@@ -68,37 +69,46 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
+        image: {{ .Values.images.repository }}/{{ .Values.paymentService.name }}:{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
         - containerPort: 50051
         env:
         - name: PORT
           value: "50051"
+        {{- if .Values.opentelemetryCollector.create }}
+        - name: COLLECTOR_SERVICE_ADDR
+          value: "{{ .Values.opentelemetryCollector.name }}:4317"
+        - name: OTEL_SERVICE_NAME
+          value: "{{ .Values.paymentService.name }}"
+        {{- end }}
+        {{- if .Values.googleCloudOperations.tracing }}
+        - name: ENABLE_TRACING
+          value: "1"
+        {{- end }}
         {{- if not .Values.googleCloudOperations.profiler }}
         - name: DISABLE_PROFILER
           value: "1"
         {{- end }}
         readinessProbe:
-          periodSeconds: 5
           grpc:
             port: 50051
         livenessProbe:
           grpc:
             port: 50051
         resources:
-          {{- toYaml .Values.shippingService.resources | nindent 10 }}
+          {{- toYaml .Values.paymentService.resources | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.paymentService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.paymentService.name }}
 spec:
   type: ClusterIP
   selector:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.paymentService.name }}
   ports:
   - name: grpc
     port: 50051
@@ -108,20 +118,17 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.paymentService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   podSelector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.paymentService.name }}
   policyTypes:
   - Ingress
   - Egress
   ingress:
   - from:
-    - podSelector:
-        matchLabels:
-          app: {{ .Values.frontend.name }}
     - podSelector:
         matchLabels:
           app: {{ .Values.checkoutService.name }}
@@ -136,12 +143,12 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: Sidecar
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.paymentService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   workloadSelector:
     labels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.paymentService.name }}
   egress:
   - hosts:
     - istio-system/*
@@ -154,18 +161,17 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.paymentService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.paymentService.name }}
   rules:
   - from:
     - source:
         principals:
         {{- if .Values.serviceAccounts.create }}
-        - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.frontend.name }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.checkoutService.name }}
         {{- else }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/default
@@ -173,8 +179,7 @@ spec:
     to:
     - operation:
         paths:
-        - /hipstershop.ShippingService/GetQuote
-        - /hipstershop.ShippingService/ShipOrder
+        - /hipstershop.PaymentService/Charge
         methods:
         - POST
         ports:
