--- a/hipster/helm-chart/templates/backup-04-july-2025/productcatalogservice.yaml
+++ b/hipster/helm-chart/templates/backup-04-july-2025/productcatalogservice.yaml
@@ -12,12 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if .Values.shippingService.create }}
+{{- if .Values.productCatalogService.create }}
 {{- if .Values.serviceAccounts.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.productCatalogService.name }}
   namespace: {{.Release.Namespace}}
   {{- if not .Values.serviceAccounts.annotationsOnlyForCartservice }}
   {{- with .Values.serviceAccounts.annotations }}
@@ -30,24 +30,25 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.productCatalogService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.productCatalogService.name }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.productCatalogService.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.shippingService.name }}
+        app: {{ .Values.productCatalogService.name }}
     spec:
       {{- if .Values.serviceAccounts.create }}
-      serviceAccountName: {{ .Values.shippingService.name }}
+      serviceAccountName: {{ .Values.productCatalogService.name }}
       {{- else }}
       serviceAccountName: default
       {{- end }}
+      terminationGracePeriodSeconds: 5
       {{- if .Values.securityContext.enable }}
       securityContext:
         fsGroup: 1000
@@ -68,52 +69,63 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
+        image: {{ .Values.images.repository }}/{{ .Values.productCatalogService.name }}:{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
-        - containerPort: 50051
+        - containerPort: 3550
         env:
         - name: PORT
-          value: "50051"
+          value: "3550"
+        {{- if .Values.opentelemetryCollector.create }}
+        - name: COLLECTOR_SERVICE_ADDR
+          value: "{{ .Values.opentelemetryCollector.name }}:4317"
+        - name: OTEL_SERVICE_NAME
+          value: "{{ .Values.productCatalogService.name }}"
+        {{- end }}
+        {{- if .Values.googleCloudOperations.tracing }}
+        - name: ENABLE_TRACING
+          value: "1"
+        {{- end }}
         {{- if not .Values.googleCloudOperations.profiler }}
         - name: DISABLE_PROFILER
           value: "1"
         {{- end }}
+        - name: EXTRA_LATENCY
+          value: {{ .Values.productCatalogService.extraLatency }}
         readinessProbe:
-          periodSeconds: 5
           grpc:
-            port: 50051
+            port: 3550
         livenessProbe:
           grpc:
-            port: 50051
+            port: 3550
         resources:
-          {{- toYaml .Values.shippingService.resources | nindent 10 }}
+          {{- toYaml .Values.productCatalogService.resources | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.productCatalogService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.productCatalogService.name }}
 spec:
   type: ClusterIP
   selector:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.productCatalogService.name }}
   ports:
   - name: grpc
-    port: 50051
-    targetPort: 50051
+    port: 3550
+    targetPort: 3550
 {{- if .Values.networkPolicies.create }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.productCatalogService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   podSelector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.productCatalogService.name }}
   policyTypes:
   - Ingress
   - Egress
@@ -125,8 +137,11 @@ spec:
     - podSelector:
         matchLabels:
           app: {{ .Values.checkoutService.name }}
+    - podSelector:
+        matchLabels:
+          app: {{ .Values.recommendationService.name }}
     ports:
-     - port: 50051
+     - port: 3550
        protocol: TCP
   egress:
   - {}
@@ -136,12 +151,12 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: Sidecar
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.productCatalogService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   workloadSelector:
     labels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.productCatalogService.name }}
   egress:
   - hosts:
     - istio-system/*
@@ -154,12 +169,12 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.productCatalogService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.productCatalogService.name }}
   rules:
   - from:
     - source:
@@ -167,17 +182,18 @@ spec:
         {{- if .Values.serviceAccounts.create }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.frontend.name }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.checkoutService.name }}
+        - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.recommendationService.name }}
         {{- else }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/default
         {{- end }}
     to:
     - operation:
         paths:
-        - /hipstershop.ShippingService/GetQuote
-        - /hipstershop.ShippingService/ShipOrder
+        - /hipstershop.ProductCatalogService/GetProduct
+        - /hipstershop.ProductCatalogService/ListProducts
         methods:
         - POST
         ports:
-        - "50051"
+        - "3550"
 {{- end }}
 {{- end }}
