--- a/hipster/helm-chart/templates/backup-04-july-2025/recommendationservice.yaml
+++ b/hipster/helm-chart/templates/backup-04-july-2025/recommendationservice.yaml
@@ -12,12 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if .Values.shippingService.create }}
+{{- if .Values.recommendationService.create }}
 {{- if .Values.serviceAccounts.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.recommendationService.name }}
   namespace: {{.Release.Namespace}}
   {{- if not .Values.serviceAccounts.annotationsOnlyForCartservice }}
   {{- with .Values.serviceAccounts.annotations }}
@@ -30,24 +30,25 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.recommendationService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.recommendationService.name }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.recommendationService.name }}
   template:
     metadata:
       labels:
-        app: {{ .Values.shippingService.name }}
+        app: {{ .Values.recommendationService.name }}
     spec:
       {{- if .Values.serviceAccounts.create }}
-      serviceAccountName: {{ .Values.shippingService.name }}
+      serviceAccountName: {{ .Values.recommendationService.name }}
       {{- else }}
       serviceAccountName: default
       {{- end }}
+      terminationGracePeriodSeconds: 5
       {{- if .Values.securityContext.enable }}
       securityContext:
         fsGroup: 1000
@@ -58,8 +59,8 @@ spec:
         seccompProfile:
           type: {{ .Values.seccompProfile.type }}
         {{- end }}
-      {{- end }}
       containers:
+      {{- end }}
       - name: server
         securityContext:
           allowPrivilegeEscalation: false
@@ -68,52 +69,65 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
+        image: {{ .Values.images.repository }}/{{ .Values.recommendationService.name }}:{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
-        - containerPort: 50051
+        - containerPort: 8080
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 8080
+        livenessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 8080
         env:
         - name: PORT
-          value: "50051"
+          value: "8080"
+        - name: PRODUCT_CATALOG_SERVICE_ADDR
+          value: "{{ .Values.productCatalogService.name }}:3550"
+        {{- if .Values.opentelemetryCollector.create }}
+        - name: COLLECTOR_SERVICE_ADDR
+          value: "{{ .Values.opentelemetryCollector.name }}:4317"
+        - name: OTEL_SERVICE_NAME
+          value: "{{ .Values.recommendationService.name }}"
+        {{- end }}
+        {{- if .Values.googleCloudOperations.tracing }}
+        - name: ENABLE_TRACING
+          value: "1"
+        {{- end }}
         {{- if not .Values.googleCloudOperations.profiler }}
         - name: DISABLE_PROFILER
           value: "1"
         {{- end }}
-        readinessProbe:
-          periodSeconds: 5
-          grpc:
-            port: 50051
-        livenessProbe:
-          grpc:
-            port: 50051
         resources:
-          {{- toYaml .Values.shippingService.resources | nindent 10 }}
+          {{- toYaml .Values.recommendationService.resources | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.recommendationService.name }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.recommendationService.name }}
 spec:
   type: ClusterIP
   selector:
-    app: {{ .Values.shippingService.name }}
+    app: {{ .Values.recommendationService.name }}
   ports:
   - name: grpc
-    port: 50051
-    targetPort: 50051
+    port: 8080
+    targetPort: 8080
 {{- if .Values.networkPolicies.create }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.recommendationService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   podSelector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.recommendationService.name }}
   policyTypes:
   - Ingress
   - Egress
@@ -122,11 +136,8 @@ spec:
     - podSelector:
         matchLabels:
           app: {{ .Values.frontend.name }}
-    - podSelector:
-        matchLabels:
-          app: {{ .Values.checkoutService.name }}
     ports:
-     - port: 50051
+     - port: 8080
        protocol: TCP
   egress:
   - {}
@@ -136,15 +147,16 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: Sidecar
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.recommendationService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   workloadSelector:
     labels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.recommendationService.name }}
   egress:
   - hosts:
     - istio-system/*
+    - ./{{ .Values.productCatalogService.name }}.{{ .Release.Namespace }}.svc.cluster.local
     {{- if .Values.opentelemetryCollector.create }}
     - ./{{ .Values.opentelemetryCollector.name }}.{{ .Release.Namespace }}.svc.cluster.local
     {{- end }}
@@ -154,30 +166,28 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: {{ .Values.shippingService.name }}
+  name: {{ .Values.recommendationService.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.shippingService.name }}
+      app: {{ .Values.recommendationService.name }}
   rules:
   - from:
     - source:
         principals:
         {{- if .Values.serviceAccounts.create }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.frontend.name }}
-        - cluster.local/ns/{{ .Release.Namespace }}/sa/{{ .Values.checkoutService.name }}
         {{- else }}
         - cluster.local/ns/{{ .Release.Namespace }}/sa/default
         {{- end }}
     to:
     - operation:
         paths:
-        - /hipstershop.ShippingService/GetQuote
-        - /hipstershop.ShippingService/ShipOrder
+        - /hipstershop.RecommendationService/ListRecommendations
         methods:
         - POST
         ports:
-        - "50051"
+        - "8080"
 {{- end }}
 {{- end }}
