--- a/hipster/helm-chart/templates/checkoutservice.yaml
+++ b/hipster/helm-chart/templates/checkoutservice.yaml
@@ -68,7 +68,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.checkoutService.name }}:{{ .Values.images.tag | default .Chart.AppVersion }}
+        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
         ports:
         - containerPort: 5050
         readinessProbe:
