--- a/hipster/helm-chart/templates/currencyservice.yaml
+++ b/hipster/helm-chart/templates/currencyservice.yaml
@@ -69,7 +69,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.currencyService.name }}:{{ .Values.images.tag | default .Chart.AppVersion }}
+        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
         ports:
         - name: grpc
           containerPort: 7000
