--- a/hipster/helm-chart/templates/productcatalogservice.yaml
+++ b/hipster/helm-chart/templates/productcatalogservice.yaml
@@ -69,7 +69,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.productCatalogService.name }}:{{ .Values.images.tag | default .Chart.AppVersion }}
+        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
         ports:
         - containerPort: 3550
         env:
